# jobsidian

./: .gitignore  README.md  main.py  pyproject.toml
jobsidian/: cli.py  common.py  hn_fetcher.py  obsidian.py  parser_llm.py
