[project]
name = "jobsidian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"requests>=2.31.0",
	"beautifulsoup4>=4.12.2",
	"pyyaml>=6.0.1",
	"openrouter>=0.0.16",
	"dotenv>=0.9.9",
	"markdownify>=1.2.2",
	"pydantic-yaml>=1.6.0",
	"pydantic>=2.12.4",
]

[project.scripts]
jobsidian = "jobsidian.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobsidian"]
